[package]
name = "pixels-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
env_logger = "0.9.0"
getrandom = "0.2.3"
lazy_static = "1.4"
line_drawing = "1.0.0"
log = "0.4.14"
parking_lot  = "0.11"
pixels = "0.8.0"
mlua = { version = "0.6.6", features = ["luajit"]}
thiserror = "1.0"
winit = "0.25"
winit_input_helper = "0.10.0"
notify = "5.0.0-pre.13"

[profile.release]
debug=true

[features]
