[package]
name = "pixels-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.4.3"
env_logger = "0.9.0"
getrandom = "0.2.3"
lazy_static = "1.4"
line_drawing = "1.0.0"
log = "0.4.14"
parking_lot  = "0.12"
pixels = "0.9.0"
png = "0.17"
mlua = { version = "0.7", features = ["luajit"]}
thiserror = "1.0"
winit = "0.26"
winit_input_helper = "0.11"
notify = "5.0.0-pre.13"

[profile.release]
debug=true

[features]
